# FullFrame

./: .gitignore  CMakeLists.txt  README.md  RELEASING.md  configure-mingw.ps1  create-installer.ps1  find-inno.ps1  installer.iss  mingw-toolchain.cmake  tags_list.txt
assets/: app.rc  resources.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/core/: tagmanager.cpp  tagmanager.h  thumbnailcache.cpp  thumbnailcache.h  thumbnailcreator.cpp  thumbnailcreator.h  thumbnailloadthread.cpp  thumbnailloadthread.h
src/models/: imagethumbnailmodel.cpp  imagethumbnailmodel.h
src/views/: imagegridview.cpp  imagegridview.h  taggingmodewidget.cpp  taggingmodewidget.h  thumbnaildelegate.cpp  thumbnaildelegate.h
src/widgets/: tagsidebar.cpp  tagsidebar.h
